# zpl-toolchain

./: .gitattributes  .gitignore  APACHE-2.0-LICENSE.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIT-LICENSE.txt  README.md  install.sh  release-plz.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg  pre-commit  pre-push
.github/actions/prepare-vscode-core-runtime/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  homebrew-tap-validate.yml  release-plz.yml  release-recovery.yml  release.yml  workflow-lint.yml  workflow-security-lint.yml
Formula/: zpl-toolchain.rb
contracts/: README.md
contracts/fixtures/: bindings-parity.v1.json  print-job-lifecycle.v1.json  print-status-framing.v1.json
crates/bindings-common/: Cargo.toml  README.md  build.rs
crates/bindings-common/src/: lib.rs
crates/bindings-common/tests/: cross_target_parity.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/data/: parser_tables.json
crates/cli/docs/: EXAMPLES.md
crates/cli/src/: main.rs  render.rs
crates/cli/tests/: cli_aliases_stdin_and_lint_json.rs  doctor_cmd.rs  explain_cmd.rs  format_cmd.rs  json_error_envelopes.rs  print_cmd.rs  sarif_output.rs
crates/core/: Cargo.toml  README.md
crates/core/docs/: EXAMPLES.md
crates/core/examples/: pipeline_benchmark.rs
crates/core/src/: hex_escape.rs  lib.rs
crates/core/src/grammar/: ast.rs  diag.rs  dump.rs  emit.rs  lexer.rs  mod.rs  parser.rs  tables.rs
crates/core/src/state/: mod.rs
crates/core/src/validate/: args.rs  constraints.rs  context.rs  diagnostics_util.rs  field.rs  mod.rs  pipeline.rs  plan.rs  predicates.rs  preflight.rs  profile_constraints.rs  semantic.rs  state.rs
crates/core/tests/: arg_union.rs  cross_command_state.rs  emit_roundtrip.rs  fuzz_smoke.rs  opcode_trie.rs  parser.rs  rich_fields.rs  samples.rs  snapshots.rs  validator.rs
crates/core/tests/common/: mod.rs
crates/core/tests/golden/: barcode_label.json  cross_command_state.json  diagnostic_issues.json  empty_label.json  graphics_formatting.json  multi_field_label.json  multi_label.json  raw_payload.json  resolved_state_barcode_defaults.json  resolved_state_font_orientation_defaults.json  resolved_state_layout_defaults.json  simple_text_label.json  tilde_commands.json  unknown_commands.json
crates/diagnostics/: Cargo.toml  README.md  build.rs
crates/diagnostics/docs/: EXAMPLES.md
crates/diagnostics/spec/: diagnostics.jsonc
crates/diagnostics/src/: codes.rs  lib.rs
crates/ffi/: Cargo.toml  README.md  cbindgen.toml
crates/ffi/src/: lib.rs
crates/jsonc-strip/: Cargo.toml  README.md
crates/jsonc-strip/src/: lib.rs
crates/print-client/: Cargo.toml  README.md
crates/print-client/src/: addr.rs  config.rs  error.rs  frame.rs  job.rs  lib.rs  retry.rs  serial.rs  status.rs  tcp.rs  usb.rs
crates/print-client/tests/: contract_job_lifecycle.rs  contract_status_framing.rs  integration.rs
crates/profile/: Cargo.toml  README.md
crates/profile/docs/: EXAMPLES.md
crates/profile/src/: lib.rs
crates/python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/python/src/: lib.rs
crates/python/tests/: test_api.py
crates/spec-compiler/: Cargo.toml  README.md
crates/spec-compiler/docs/: EXAMPLES.md
crates/spec-compiler/src/: lib.rs  main.rs  pipeline.rs  source.rs
crates/spec-tables/: Cargo.toml  README.md
crates/spec-tables/docs/: EXAMPLES.md
crates/spec-tables/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
docs/: BACKLOG.md  BARCODE_DATA_RULES.md  COMPATIBILITY_POLICY.md  CORPUS_EXPANSION_PLAN.md  DIAGNOSTIC_CODES.md  HOMEBREW.md  PRINT_CLIENT.md  PROFILE_GUIDE.md  PUBLISH_PLAN.md  RELEASE.md  ROADMAP.md  STATE_MAP.md  TESTING.md  VSCODE_EXTENSION.md
docs/adr/: 0001-spec-first-jsonc-per-command.md  0002-constraints-engine-data-driven.md  0003-opcode-trie-and-parser-lookups.md  0004-jsonc-vs-json.md  0005-embed-tables-in-cli.md  0006-profile-schema-and-versioning.md  0007-raw-field-data-handling.md  0008-ecosystem-bindings.md  INDEX.md
docs/public/schema/: SCHEMA.md  SPEC_AUTHORING.md  zpl-commands.jsonc
docs/research/: BluetoothPrintingRust.md  ExistingZPLTools.md  ZPL-PRINT-CLIENT-PLAN.md  schema-v2-proposal.md
docs/research/archive/: @zpl-toolchain — Spec Compiler — Working Doc (v0.1).md  original-implementation-plan.md  zpl-toolchain-component-working-doc-template.md
profiles/: zebra-generic-203.json  zebra-generic-300.json  zebra-gk420t-203.json  zebra-zd420-203.json  zebra-zd620-203.json  zebra-zd621-203.json  zebra-zq520-203.json  zebra-zt231-203.json  zebra-zt410-203.json  zebra-zt411-203.json  zebra-zt610-300.json
samples/: compliance_label.zpl  product_label.zpl  shipping_label.zpl  usps_surepost_sample.zpl  warehouse_label.zpl
scripts/: check-devcontainer-ci-toolchains.mjs  check-publishable-crates.py  check-validator-benchmark.mjs  publish.sh  refresh-core-runtime.sh  run-actionlint.sh  setup-pyo3-env.sh  test-dotnet-local.sh  test-go-local.sh  test-python-wheel-local.sh  update-homebrew-tap.sh  validate-contract-fixtures.mjs  validate-install-sh.sh
spec/commands/: ^A.jsonc  ^A@.jsonc  ^B0.jsonc  ^B1.jsonc  ^B2.jsonc  ^B3.jsonc  ^B4.jsonc  ^B5.jsonc  ^B7.jsonc  ^B8.jsonc  ^B9.jsonc  ^BA.jsonc  ^BB.jsonc  ^BC.jsonc  ^BD.jsonc  ^BE.jsonc  ^BF.jsonc  ^BI.jsonc  ^BJ.jsonc  ^BK.jsonc  ^BL.jsonc  ^BM.jsonc  ^BO.jsonc  ^BP.jsonc  ^BQ.jsonc  ^BR.jsonc  ^BS.jsonc  ^BT.jsonc  ^BU.jsonc  ^BX.jsonc  ^BY.jsonc  ^BZ.jsonc  ^CC.jsonc  ^CD.jsonc  ^CF.jsonc  ^CI.jsonc  ^CM.jsonc  ^CN.jsonc  ^CO.jsonc  ^CP.jsonc  (+176 more)
spec/schema/: profile.schema.jsonc  zpl-spec.schema.jsonc
