[workspace]
members = [
    "crates/core",
    "crates/spec-compiler",
    "crates/jsonc-strip",
    "crates/cli",
    "crates/diagnostics",
    "crates/spec-tables",
    "crates/profile",
    "crates/bindings-common",
    "crates/print-client",
    "crates/wasm",
    "crates/python",
    "crates/ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["zpl-toolchain contributors"]
description = "Spec-first, offline, deterministic ZPL II toolchain"
repository = "https://github.com/trevordcampbell/zpl-toolchain"
homepage = "https://github.com/trevordcampbell/zpl-toolchain"
keywords = ["zpl", "zebra", "label", "printer", "parser"]
categories = ["parsing", "text-processing", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
thiserror = "2"
pyo3 = "0.23"
backon = "1.3"
socket2 = "0.5"
zpl_toolchain_jsonc_strip = { path = "crates/jsonc-strip", version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "allow", priority = -1 }
clone_on_ref_ptr = "warn"
manual_let_else = "warn"
