[package]
name = "zpl_toolchain_bindings_common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared core logic for ZPL toolchain language bindings (FFI, WASM, Python)"
publish = false

[lib]
name = "zpl_toolchain_bindings_common"
path = "src/lib.rs"

[dependencies]
zpl_toolchain_core = { path = "../core" }
zpl_toolchain_diagnostics = { path = "../diagnostics" }
zpl_toolchain_spec_tables = { path = "../spec-tables" }
zpl_toolchain_profile = { path = "../profile" }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zpl_toolchain_print_client = { path = "../print-client" }

[lints]
workspace = true
