[package]
name = "zpl_toolchain_cli"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for parsing, validating, formatting, and printing ZPL II label code"
readme = "README.md"
keywords = ["zpl", "zebra", "label", "cli", "printing"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["tcp"]
tcp = ["zpl_toolchain_print_client/tcp"]
usb = ["zpl_toolchain_print_client/usb"]
serial = ["zpl_toolchain_print_client/serial"]

[dependencies]
anyhow = { workspace = true }
ariadne = "0.6"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zpl_toolchain_core = { path = "../core", version = "0.1.2" }
zpl_toolchain_profile = { path = "../profile", version = "0.1.1" }
zpl_toolchain_diagnostics = { path = "../diagnostics", version = "0.1.2" }
zpl_toolchain_print_client = { path = "../print-client", version = "0.1.0", default-features = false }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = { workspace = true }

[[bin]]
name = "zpl"
path = "src/main.rs"
