[package]
name = "zpl_toolchain_core"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core parser, emitter, and validator for ZPL II label code (part of the zpl-toolchain project)"
readme = "README.md"
keywords = ["zpl", "zebra", "label", "parser"]
categories = ["parsing", "text-processing"]

[lib]
name = "zpl_toolchain_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
zpl_toolchain_diagnostics = { path = "../diagnostics", version = "0.1.7" }
zpl_toolchain_spec_tables = { path = "../spec-tables", version = "0.3.0" }
zpl_toolchain_profile = { path = "../profile", version = "0.1.4" }

[lints]
workspace = true
