[package]
name = "zpl_toolchain_diagnostics"
version = "0.1.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Diagnostic codes and structured error reporting for the ZPL toolchain"
readme = "README.md"
keywords = ["zpl", "zebra", "diagnostics"]
categories = ["parsing"]

[dependencies]
serde = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
zpl_toolchain_jsonc_strip = { path = "../jsonc-strip" }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
