[package]
name = "zpl_toolchain_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ZPL toolchain C FFI — shared library for Go, .NET, and other languages"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
zpl_toolchain_bindings_common = { path = "../bindings-common" }

[lints]
workspace = true
