[package]
name = "zpl_toolchain_jsonc_strip"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Shared JSONC comment stripping utility for zpl-toolchain"
publish = false

[lints]
workspace = true
