[package]
name = "zpl_toolchain_print_client"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Print client for sending ZPL to Zebra and ZPL-compatible printers over TCP, USB, and serial"
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords = ["zpl", "zebra", "printer", "label", "printing"]
categories = ["hardware-support", "network-programming"]
readme = "README.md"

[features]
default = ["tcp"]
tcp = ["dep:socket2"]
usb = ["dep:nusb", "dep:futures-lite"]
serial = ["dep:serialport"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true, optional = true }

# Optional transports
nusb = { version = "0.1", optional = true }
futures-lite = { version = "2", optional = true }
serialport = { version = "4.8", optional = true, default-features = false }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
