[package]
name = "zpl_toolchain_profile"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Printer profile loading and validation for the ZPL toolchain"
readme = "README.md"
keywords = ["zpl", "zebra", "printer", "profile"]
categories = ["parsing", "config"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
