[package]
name = "zpl_toolchain_python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ZPL toolchain Python bindings — parse, validate, format ZPL from Python"
publish = false

[lib]
name = "zpl_toolchain"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }
zpl_toolchain_bindings_common = { path = "../bindings-common" }

[lints]
workspace = true
