[package]
name = "zpl_toolchain_spec_compiler"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Spec-file compiler that generates parser tables and documentation for ZPL commands"
readme = "README.md"
keywords = ["zpl", "zebra", "compiler", "codegen"]
categories = ["parsing", "command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
walkdir = "2"
zpl_toolchain_spec_tables = { path = "../spec-tables", version = "0.5.0" }
zpl_toolchain_jsonc_strip = { path = "../jsonc-strip" }

[[bin]]
name = "zpl-spec-compiler"
path = "src/main.rs"

[lints]
workspace = true
