[package]
name = "zpl_toolchain_spec_tables"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser tables and command spec data structures for the ZPL toolchain"
readme = "README.md"
keywords = ["zpl", "zebra", "parser", "tables"]
categories = ["parsing", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
